--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,124 +4,152 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#242424"
+    android:background="@drawable/background_accueil"
     android:orientation="vertical"
     android:weightSum="7"
     tools:context=".MainActivity">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:layout_weight="3">
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center">
+        android:layout_height="0dp"
+        android:layout_weight="3"
+        android:gravity="bottom|center_horizontal">
+
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ui_logo"/>
+            android:layout_width="266dp"
+            android:layout_height="228dp"
+            android:src="@drawable/logo_mate"/>
+
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="right|center">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_ui_grad"/>
-    </LinearLayout>
-</RelativeLayout>
-</LinearLayout>
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:weightSum="3"
-    android:orientation="vertical"
-    android:layout_weight="2">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:gravity="bottom"
-        android:layout_weight="1">
+        android:weightSum="3"
+        android:orientation="vertical"
+        android:layout_weight="2">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="40dp"
-            android:fontFamily="@font/roboto_black"
-            android:text="Login"
-            android:textColor="#ffffff"
-            android:textSize="38sp" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:gravity="center"
-        android:layout_weight="1">
-
-        <EditText
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp"
-            android:background="@drawable/edit_txt_1"
-            android:fontFamily="@font/roboto_light"
-            android:hint="Email"
-            android:inputType="textEmailAddress"
-            android:paddingLeft="20dp"
-            android:textColorHint="#DADADA" />
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            tools:ignore="NestedWeights">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:fontFamily="@font/poppins_semibold"
+                android:text="@string/slogan"
+                android:textColor="#000000"
+                android:textSize="20sp">
+
+            </TextView>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center">
+
+            <EditText
+                android:id="@+id/identifiant_coloc"
+                android:layout_width="286dp"
+                android:layout_height="42dp"
+                android:layout_marginLeft="52dp"
+                android:layout_marginRight="52dp"
+                android:background="@drawable/edit_txt_id_coloc"
+                android:fontFamily="@font/poppins_medium_italic"
+                android:hint="@string/identitfiant_de_la_coloc"
+                android:inputType="number"
+                android:paddingStart="20dp"
+                android:textColor="#9E9E9E"
+                android:textColorHint="#9E9E9E"
+                tools:ignore="RtlSymmetry" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            >
+
+            <Button
+                android:id="@+id/btn_rejoindre_coloc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/ic_btn_rejoindre"
+                android:fontFamily="@font/poppins_semibold"
+                android:text="@string/rejoindre"
+                android:textColor="#FFFFFF"
+
+                android:textAlignment="center"
+                android:textAllCaps="false"
+                android:textSize="15sp">
+
+            </Button>
+        </LinearLayout>
+
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:gravity="center"
+        android:weightSum="2"
+        android:orientation="vertical"
         android:layout_weight="1">
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp"
-            android:background="@drawable/edit_txt_1"
-            android:fontFamily="@font/roboto_light"
-            android:hint="Password"
-            android:inputType="textPassword"
-            android:paddingLeft="20dp"
-            android:textColorHint="#DADADA" />
-    </LinearLayout>
-</LinearLayout>
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:gravity="center"
-    android:layout_weight="1">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/ic_rectangle_grad"
-        android:fontFamily="@font/roboto_medium"
-        android:text="Get in"
-        android:textAllCaps="false"
-        android:textColor="#ffffff"
-        android:textSize="23sp" />
-</LinearLayout>
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:gravity="center|bottom"
-    android:layout_weight="1">
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Forgot password"
-    android:textColor="#ffffff"
-    android:layout_marginBottom="20dp"
-    android:textSize="14sp"
-    android:fontFamily="@font/roboto_light"
-    />
-</LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            tools:ignore="NestedWeights">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins_medium"
+                android:text="@string/ou"
+                android:textColor="#9E9E9E"
+                android:textSize="15sp">
+
+            </TextView>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            >
+
+            <Button
+                android:id="@+id/btn_creer_coloc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/ic_btn_creer"
+                android:fontFamily="@font/poppins_semibold"
+                android:text="@string/creer_colocation"
+                android:textAlignment="center"
+                android:textAllCaps="false"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp">
+
+            </Button>
+        </LinearLayout>
+
+
+
+    </LinearLayout>
+
+
+
+
 </LinearLayout>
