--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
-        <item>@font/roboto_black</item>
-        <item>@font/roboto_light</item>
-        <item>@font/roboto_medium</item>
+        <item>@font/poppins_medium</item>
+        <item>@font/poppins_medium_italic</item>
+        <item>@font/poppins_semibold</item>
     </array>
 </resources>
